--- a/samples/44contacts.html
+++ b/samples/44contacts.html
@@ -455,6 +455,8 @@
         </li>
       </ul>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="../javascript/main.js"></script>     
   </body>
 </html>
 
